[gd_scene load_steps=3 format=3 uid="uid://b8y6fhm02gyrs"]

[ext_resource type="Script" path="res://main.gd" id="1_5muyi"]
[ext_resource type="PackedScene" uid="uid://c5s25uvu1jej6" path="res://caves.tscn" id="1_dr7rq"]

[node name="Main" type="Node"]
script = ExtResource("1_5muyi")

[node name="CaveScene" parent="." instance=ExtResource("1_dr7rq")]

[node name="CollisionPolygon2D" parent="CaveScene/Back" index="0"]
polygon = PackedVector2Array(46.1872, 261.127, 100.364, 239.708, 373.767, 239.078, 432.983, 275.616, 37, 277)

[connection signal="input_event" from="CaveScene/LeftDoor" to="." method="_on_left_door_input_event"]
[connection signal="input_event" from="CaveScene/MiddleDoor" to="." method="_on_middle_door_input_event"]
[connection signal="input_event" from="CaveScene/RightDoor" to="." method="_on_right_door_input_event"]
[connection signal="input_event" from="CaveScene/Back" to="." method="_on_back_input_event"]

[editable path="CaveScene"]
